--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,4 +93,4 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         run: |
-          npx wrangler pages publish ./out --project-name=aleksac-me --branch ${{ github.head_ref || github.ref_name }}
+          npx wrangler@2.9.1 pages publish ./out --project-name=aleksac-me --branch ${{ github.head_ref || github.ref_name }}
