--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,3 +94,17 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         run: |
           npx wrangler@2.9.1 pages publish ./out --project-name=aleksac-me --branch ${{ github.head_ref || github.ref_name }}
+
+      # This is needed by lighthouse ci to run on previews on branches other than
+      # the default branch. This info needs to be obtained this way because actions
+      # triggered by `worflow_run` run against the default branch
+      # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#using-data-from-the-triggering-workflow
+      - name: Save branch name
+        run: |
+          mkdir -p ./branch-name
+          echo $GITHUB_REF_NAME > ./branch-name/branch-name
+
+      - uses: actions/upload-artifact@v3.1.2
+        with:
+          name: branch-name
+          path: branch-name/
