--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,4 +107,4 @@ jobs:
       - uses: actions/upload-artifact@v3.1.2
         with:
           name: branch-name
-          path: branch-name/
+          path: website/branch-name/
