--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Save branch name
         run: |
           mkdir -p ./branch-name
-          echo $GITHUB_REF_NAME > ./branch-name/branch-name
+          echo -n $GITHUB_REF_NAME > ./branch-name/branch-name
 
       - uses: actions/upload-artifact@v3.1.2
         with:
