--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,12 +7,12 @@ repos:
       - id: check-yaml
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.6
+    rev: v3.0.1
     hooks:
       - id: prettier
         args: [--cache]
         additional_dependencies:
-          - prettier@v3.0.0-alpha.4
+          - prettier@v3.0.1
           - prettier-plugin-tailwindcss
         types_or:
           - javascript
