--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy the website
+name: Deploy
 
 on:
   workflow_dispatch:
@@ -35,16 +35,16 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v2.2.4
+      - uses: pnpm/action-setup@v4
         with:
-          version: 7
+          version: 9
 
       - name: Set up node
-        uses: actions/setup-node@v3.6.0
+        uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "22"
           cache: pnpm
           cache-dependency-path: website/pnpm-lock.yaml
 
@@ -52,7 +52,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Set up eslint and tsbuildinfo cache
-        uses: actions/cache@v3.2.3
+        uses: actions/cache@v4
         with:
           path: |
             website/.eslintcache
@@ -67,7 +67,7 @@ jobs:
           yarn lint-ci
 
       - name: Set up next build cache
-        uses: actions/cache@v3.2.3
+        uses: actions/cache@v4
         with:
           path: website/.next
           key: next-build-${{ runner.os }}-${{ github.run_id }}
@@ -82,7 +82,7 @@ jobs:
           pnpm run export
 
       - name: Set up npx cache
-        uses: actions/cache@v3.2.3
+        uses: actions/cache@v4
         with:
           path: ~/.npm/_npx
           key: npx-${{ runner.os }}-${{ github.run_id }}
@@ -94,7 +94,7 @@ jobs:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         run: |
-          npx wrangler@2.9.1 pages publish ./out --project-name=aleksac-me --branch ${{ github.head_ref || github.ref_name }}
+          npx wrangler@3 pages deploy ./out --project-name=aleksac-me --branch ${{ github.head_ref || github.ref_name }}
 
       # This is needed by lighthouse ci to run on previews on branches other than
       # the default branch. This info needs to be obtained this way because actions
@@ -105,7 +105,7 @@ jobs:
           mkdir -p ./branch-name
           echo -n $GITHUB_REF_NAME > ./branch-name/branch-name
 
-      - uses: actions/upload-artifact@v3.1.2
+      - uses: actions/upload-artifact@v4
         with:
           name: branch-name
           path: website/branch-name/
