--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,4 +1,4 @@
-name: Run pre-commit
+name: pre-commit
 
 on:
   push:
@@ -17,11 +17,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4
       - name: Set up python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
-      - uses: pre-commit/action@v3.0.0
+          python-version: "3.12"
+      - uses: pre-commit/action@v3
         env:
           SKIP: eslint,tsc,vale
