--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -1,4 +1,4 @@
-name: Run spell checker
+name: Spellcheck
 
 on:
   push:
@@ -21,11 +21,11 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4
       - name: Set up python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
-      - uses: pre-commit/action@v3.0.0
+          python-version: "3.12"
+      - uses: pre-commit/action@v3
         with:
           extra_args: vale --all-files
