--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -4,11 +4,13 @@ on:
   push:
     paths:
       - "**.md"
+      - ".github/workflows/spellcheck.yml"
     branches:
       - main
   pull_request:
     paths:
       - "**.md"
+      - ".github/workflows/spellcheck.yml"
     branches:
       - main
 
@@ -26,6 +28,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      - uses: pre-commit/action@v3
+      - uses: pre-commit/action@v3.0.1
         with:
           extra_args: vale --all-files
