--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,13 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
         args: [--cache]
@@ -23,7 +23,7 @@ repos:
           - json
 
   - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.27.2
+    rev: 0.28.4
     hooks:
       - id: check-github-workflows
 
@@ -50,7 +50,7 @@ repos:
         entry: pnpm --silent --prefix website typecheck
 
   - repo: https://github.com/errata-ai/vale
-    rev: v2.29.7
+    rev: v3.4.2
     hooks:
       - id: vale
         types_or:
