--- a/.github/workflows/resume-update.yml
+++ b/.github/workflows/resume-update.yml
@@ -23,13 +23,13 @@ jobs:
           git clone https://github.com/AleksaC/resume /tmp/resume
           cp /tmp/resume/resume.pdf ./website/public/
 
-      # - name: Configure git
-      #   run: |
-      #     git config --global user.name 'Github Actions'
-      #     git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+      - name: Configure git
+        run: |
+          git config --global user.name 'Github Actions'
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
 
-      # - name: Push changes
-      #   run: |
-      #     git add resume.pdf
-      #     git commit -m "Update resume.pdf"
-      #     git push origin main
+      - name: Push changes
+        run: |
+          git add resume.pdf
+          git commit -m "Update resume.pdf"
+          git push --dry-run origin main
