temporarily allow all types for repository dispatch

--- a/.github/workflows/resume-update.yml
+++ b/.github/workflows/resume-update.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   workflow_dispatch:
   repository_dispatch:
-    types: [resume_update]
+    # types: [resume_update]
 
 defaults:
   run:
