--- a/.github/workflows/resume-update.yml
+++ b/.github/workflows/resume-update.yml
@@ -11,7 +11,7 @@ defaults:
     shell: bash
 
 jobs:
-  build:
+  push-changes:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Update resume
         run: |
