--- a/.github/workflows/resume-update.yml
+++ b/.github/workflows/resume-update.yml
@@ -1,7 +1,6 @@
 name: Resume update
 
 on:
-  pull_request:
   workflow_dispatch:
   repository_dispatch:
     types: ["resume-update"]
@@ -11,7 +10,7 @@ defaults:
     shell: bash
 
 jobs:
-  build:
+  push-changes:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,11 +18,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Update resume
         run: |
           git clone https://github.com/AleksaC/resume /tmp/resume
           cp /tmp/resume/resume.pdf ./website/public/
+          git status
 
       - name: Configure git
         run: |
@@ -33,5 +34,6 @@ jobs:
       - name: Push changes
         run: |
           git add ./website/public/resume.pdf
+          git status
           git commit -m "Update resume.pdf"
           git push origin main
