--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,22 +6,6 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
 
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        args: [--cache]
-        additional_dependencies:
-          - prettier@v3.0.1
-          - prettier-plugin-tailwindcss
-        types_or:
-          - javascript
-          - jsx
-          - ts
-          - tsx
-          - css
-          - json
-
   - repo: https://github.com/sirosen/check-jsonschema
     rev: 0.28.4
     hooks:
@@ -48,6 +32,21 @@ repos:
           - ts
           - tsx
         entry: pnpm --silent --prefix website typecheck
+
+      - id: prettier
+        name: prettier
+        language: node
+        entry: prettier --write --cache
+        additional_dependencies:
+          - prettier@v3.3.3
+          - prettier-plugin-tailwindcss@0.6.6
+        types_or:
+          - javascript
+          - jsx
+          - ts
+          - tsx
+          - css
+          - json
 
   - repo: https://github.com/errata-ai/vale
     rev: v3.4.2
