--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -16,16 +16,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@context/*": ["src/context/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@lib/*": ["src/lib/*"],
-      "@typing/*": ["src/typing/*"],
-      "@constants/*": ["src/constants/*"],
-      "@services/*": ["src/services/*"],
-      "@utils": ["src/utils"],
-      "@utils/*": ["src/utils/*"],
-      "@config": ["src/config"]
+      "@/*": ["src/*"]
     }
   },
   "exclude": ["node_modules"],
