--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -24,4 +24,4 @@ jobs:
           python-version: "3.12"
       - uses: pre-commit/action@v3.0.1
         env:
-          SKIP: eslint,tsc,vale
+          SKIP: check
