debug lhci workflow

--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -1,11 +1,14 @@
 name: Lighthouse CI
 
 on:
-  workflow_run:
-    workflows:
-      - Deploy
-    types:
-      - completed
+  push:
+    branches:
+      - astro-rewrite
+  # workflow_run:
+  #   workflows:
+  #     - Deploy
+  #   types:
+  #     - completed
 
 defaults:
   run:
