--- a/website/package.json
+++ b/website/package.json
@@ -23,12 +23,12 @@
     "rehype-slug": "^6.0.0",
     "rss": "^1.2.2",
     "tailwindcss": "^3.4.9",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "rollup-plugin-visualizer": "^5.12.0"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "rollup-plugin-visualizer": "^5.12.0"
+    "prettier-plugin-tailwindcss": "^0.6.6"
   }
 }
