--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Run build and check
         env:
-          NEXT_TELEMETRY_DISABLED: 1
+          ASTRO_TELEMETRY_DISABLED: 1
         run: |
           pnpm run build
 
