--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
       - "website/public/**"
       - "website/**.md"
       - "website/package.json"
-      - "website/pnpm-lock.yaml"
+      - "website/bun.lockb"
       - "website/tsconfig.json"
       - ".github/workflows/deploy.yml"
     branches:
@@ -23,7 +23,7 @@ on:
       - "website/public/**"
       - "website/**.md"
       - "website/package.json"
-      - "website/pnpm-lock.yaml"
+      - "website/bun.lockb"
       - "website/tsconfig.json"
       - ".github/workflows/deploy.yml"
     branches:
@@ -41,25 +41,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
       - name: Set up node
-        uses: actions/setup-node@v4
+        uses: actions/setup-bun@v2
         with:
-          node-version: "20"
-          cache: pnpm
-          cache-dependency-path: website/pnpm-lock.yaml
+          bun-version: 1
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prod
+        run: bun install --frozen-lockfile --prod
 
       - name: Run build and check
         env:
           ASTRO_TELEMETRY_DISABLED: 1
         run: |
-          pnpm run build
+          bun run build
 
       - name: Set up npx cache
         uses: actions/cache@v4
