--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up node
-        uses: actions/setup-bun@v2
+        uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1
 
