--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Set up node
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1
+          bun-version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile --prod
