--- a/.github/workflows/purge-cache.yml
+++ b/.github/workflows/purge-cache.yml
@@ -37,7 +37,7 @@ jobs:
       # by using a cache rule or setting a no-cache header for the path
       - name: Purge CloudFlare cache for resume.pdf
         env:
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         run: |
           unzip $GITHUB_WORKSPACE/branch-name.zip
@@ -49,7 +49,7 @@ jobs:
           fi
 
           res=$(curl \
-            --url "https://api.cloudflare.com/client/v4/zones/${CLOUDFLARE_ACCOUNT_ID}/purge_cache" \
+            --url "https://api.cloudflare.com/client/v4/zones/${CLOUDFLARE_ZONE_ID}/purge_cache" \
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${CLOUDFLARE_API_TOKEN}" \
             --data '{
