--- a/website/package.json
+++ b/website/package.json
@@ -12,23 +12,23 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.2",
-    "@astrojs/tailwind": "^5.1.0",
-    "@types/node": "^22.3.0",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.3",
+    "@types/node": "^22.10.2",
     "@types/rss": "^0.0.32",
-    "astro": "^4.13.2",
-    "astro-parallel-build-check": "^0.1.2",
+    "astro": "^5.0.5",
+    "astro-parallel-build-check": "^0.1.5",
     "date-fns": "^3.6.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "rss": "^1.2.2",
-    "tailwindcss": "^3.4.9",
-    "typescript": "^5.5.4",
-    "rollup-plugin-visualizer": "^5.12.0"
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.6"
+    "prettier-plugin-tailwindcss": "^0.6.9"
   }
 }
