--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,6 @@ repos:
 
   - repo: local
     hooks:
-      # TODO: fix
       - id: prettier
         name: prettier
         language: node
@@ -22,7 +21,7 @@ repos:
           - prettier@v3.4.2
           - prettier-plugin-tailwindcss@0.6.14
           - prettier-plugin-astro@0.14.1
-        entry: prettier --cache --write
+        entry: prettier --write
 
       - id: astro-check
         name: astro check
