--- a/website/package.json
+++ b/website/package.json
@@ -9,7 +9,8 @@
     "preview": "astro preview",
     "check": "astro check",
     "analyze": "ANALYZE=true astro build",
-    "astro": "astro"
+    "astro": "astro",
+    "prettier": "prettier"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
