--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,10 +6,10 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
 
-  - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.33.2
+  - repo: https://github.com/rhysd/actionlint
+    rev: v1.7.10
     hooks:
-      - id: check-github-workflows
+      - id: actionlint
 
   - repo: local
     hooks:
