--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Save branch name
         run: |
           mkdir -p ./branch-name
-          echo -n $BRANCH_NAME > ./branch-name/branch-name
+          echo -n "$BRANCH_NAME" > ./branch-name/branch-name
 
       - uses: actions/upload-artifact@v4
         with:
