--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,8 @@ repos:
     rev: v1.7.10
     hooks:
       - id: actionlint
+        args:
+          - -shellcheck=
 
   - repo: local
     hooks:
